Revision history for perl distribution Convos

0.99_18 Not Released
 - Fix IRC username cannot contain special characters #296
 - Fix parsing IRC user modes dynamically #287
 - Fix "Goto anything" sorts by dialog name length
 - Fix queuing connections after connection errors
 - Fix API URL when mounting Convos inside on non-root reverse proxy config
 - Add EXPERIMENTAL sort by last-read/activity
 - Add Dockerfile
 - Add "disable expanding links" setting in profile
 - Server messages can be read in frontend
 - Server settings can be edited in the "info" sidebar

0.99_17 2016-11-11T09:58:54+0200
 - Add support for editing on_connect_commands
 - Add support for JSON config - https://convos.by/doc/config.html#introduction

0.99_16 2016-11-08T13:37:58+0200
 - Fix getting historic messages, without duplicates #292
 - Fix getting messages from channel with "." in the name #293
 - Add custom styling for participants that are not currently in the channel
 - Add EXPERIMENTAL support for pluggable authentication #89
 - Add support for setting CONVOS_HOME from config file as "home" #289

0.99_15 2016-10-13T22:51:01+0200
 - Fix IRC join channel redirect #284
 - Fix parting IRC channel, even if not in the channel
 - Fix highlight color in chat
 - Fix keeping on_connect_commands
 - Improved keeping scroll position to bottom #269

0.99_14 2016-10-06T22:42:15+0200
 - Autocomplete on nick will start from the beginning of the word
 - Do not autocomplete on "enter"
 - Improved keeping scroll position to bottom #269
 - Improved keeping scroll position when loading historic messages

0.99_13 2016-10-03T09:40:15+0200
 - Fix clearing Convos.settings.sidebar on mobile
 - Fix resetting max-height

0.99_12 2016-10-03T09:31:02+0200
 - Less icons in header
 - Fix <convos-input/> from overlapping main area
 - Add CustomEvent and dispatchEvent polyfill #282
 - Improved scrolling to bottom logic #269

0.99_11 2016-09-19T23:05:31+0200
 - Fix "whois" for participant who is not in any channels