@@ -50,15 +50,23 @@ $irc->run(
   }
 );
 
+$ws->send_ok(
+  {json => {method => 'send', message => '/msg supergirl too cool', connection_id => $c->id}});
+$ws->message_ok->message_like(qr{xxxxxx})->json_message_is('/connection_id', 'irc-test')
+  ->json_message_is('/dialog_id', 'supergirl')->json_message_is('/event', 'message')
+  ->json_message_is('/from',    'superman')->json_message_is('/highlight', 'false')
+  ->json_message_is('/message', 'too cool')->json_message_is('/name',      'supergirl')
+  ->json_message_is('/type',    'private')->json_message_has('/ts');
+exit;
+
 $irc->run(
   [qr{NICK}, ['nick.irc']],
   sub {
     $ws->send_ok(
       {json => {method => 'send', message => '/nick supergirl', connection_id => $c->id}});
     $ws->message_ok->json_message_is('/event', 'state')
-      ->json_message_is('/connection_id', 'irc-test')->json_message_is('/event', 'state')
-      ->json_message_is('/nick',          'supergirl')->json_message_has('/ts')
-      ->json_message_is('/type',          'me');
+      ->json_message_is('/connection_id', 'irc-test')->json_message_is('/nick', 'supergirl')
+      ->json_message_has('/ts')->json_message_is('/type', 'me');
     $ws->message_ok->json_message_has('/id')->json_message_is('/message', '/nick supergirl');
   }
 );
