@@ -6,6 +6,7 @@ Revision history for perl distribution Convos
  - Fix "Goto anything" sorts by dialog name length
  - Fix queuing connections after connection errors
  - Fix API URL when mounting Convos inside on non-root reverse proxy config
+ - Fix handling of new private messages #298
  - Add EXPERIMENTAL sort by last-read/activity
  - Add Dockerfile
  - Add "disable expanding links" setting in profile
